# liik-app

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
src/: App.tsx  main.tsx  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/Apps/DirectOpenAIApp/: Chat.module.css  Chat.tsx  ChatHistory.tsx  HistoryMessage.ts  Setup.tsx  index.tsx
src/components/form/: Field.tsx  FormTextInput.tsx  validationConstraints.ts
src/modules/: Config.ts  Log.ts
