[package]
name = "sadbird-app"
version = "0.0.0"
description = "A SadBird App. A satilite app for your desktop to access LLM and their features"
authors = ["Anton Romanov <anton.v.romanov@gmail.com>"]
license = "GPL"
repository = "https://github.com/nnmer/sadbird-app"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "path-all", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-positioner = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
